objects/POC_Results__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Results__c</fullName>
        <label>Actual Results</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Baseline_Value__c</fullName>
        <label>Baseline Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Metric_Tested__c</fullName>
        <label>Metric Tested</label>
        <picklist>
            <picklistValues>
                <fullName>Throughput (Mbps)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dedup (%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time (s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss (%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Experience (1-10)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>POC_Summary__c</fullName>
        <label>POC Summary</label>
        <referenceTo>POC_Summary__c</referenceTo>
        <relationshipLabel>POC Results</relationshipLabel>
        <relationshipName>POC_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Success_Criteria__c</fullName>
        <label>Success Criteria</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_was_tested__c</fullName>
        <label>What was tested?</label>
        <picklist>
            <picklistValues>
                <fullName>3Par</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aspera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avamar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brocade 7500 FCIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brocade Protocol 61</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Celerra Replicator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIFS – SMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIFS – SMB2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citrix VDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citrix XenApp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clearcase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commvault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DataDomain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DL3D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DoubleTake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equallogic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDS Universal Replicator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HTTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM DB2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interwoven</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LDAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lotus Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MirrorView</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>POC Results</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Ref Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POC Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>